--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<title>Мій Університет - Приєднатися</title>
 	<meta name="csrf-param" content="authenticity_token" />
-<meta name="csrf-token" content="lOEYbpxkfPTUvaWo4bAKXaT0rMH1lOjOky1PSGEW6b8rfFa9L3FuemqRVqNpyfgGW3ELAhoK3xFwkxo7NECMZA" />
+<meta name="csrf-token" content="7_wnhrN8UkZps36Q0SaeFhCdswoSNu6_17MaG-8zFtjAo2WBy1K1uKbIrfjiRR9CAXK7577giz0hZ7_NP_Kopg" />
 	
 
 	<link rel="stylesheet" href="/assets/application-4e140c18ded27e626336bae6d3e8309d25a216b7d743ca239358d38307c83392.css" data-turbo-track="reload" />
@@ -89,7 +89,7 @@
             <h1 class="card-title pricing-card-title">₴24,000 <small class="text-muted">/ рік</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
               <li>Адаптивний дизайн сайту</li>
-              <li><a target="_blank" href="http://localhost:3000/admin-panel.html">Панель адміністратора</a></li>
+              <li><a target="_blank" href="/admin-panel.html">Панель адміністратора</a></li>
               <li>Підтримка в <b>Telegram</b></li>
             </ul>
             <a class="btn btn-lg btn-block btn-outline-primary" href="https://forms.gle/us91jctsQPoPBBTe7" target="_blank" rel="nofollow">Заповнити форму</a>
@@ -104,8 +104,8 @@
           <div class="card-body">
             <h1 class="card-title pricing-card-title">₴36,000 <small class="text-muted">/ рік</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
-              <li><a href="http://localhost:3000/ios.html">iOS</a> Додаток</li>
-              <li><a href="http://localhost:3000/android.html">Android</a> Додаток</li>
+              <li><a href="/ios.html">iOS</a> Додаток</li>
+              <li><a href="/android.html">Android</a> Додаток</li>
               <li><u>Пріорітетна</u> підтримка в <b>Telegram</b></li>
             </ul>
             <a class="btn btn-lg btn-block btn-primary" href="https://forms.gle/us91jctsQPoPBBTe7" target="_blank" rel="nofollow">Почати</a>
@@ -124,7 +124,7 @@
               <li>Підтримка по <b>телефону</b></li>
               <li>Запити <u>нових функцій</u></li>
             </ul>
-            <a class="btn btn-lg btn-block btn-primary" href="http://localhost:3000/contacts.html">Зв&#39;яжіться з нами</a>
+            <a class="btn btn-lg btn-block btn-primary" href="/contacts.html">Зв&#39;яжіться з нами</a>
           </div>
         </div>
       </div>
@@ -157,7 +157,7 @@
               </td>
             </tr>
             <tr>
-              <td><a href="http://localhost:3000/admin-panel.html">Панель адміністратора</a> <span data-toggle="tooltip" title="На базі перевіреного фреймворку ActiveAdmin, без багів та помилок"><span style="color: #007bff"><i class="bi bi-question-circle"></i></span></span></td>
+              <td><a href="/admin-panel.html">Панель адміністратора</a> <span data-toggle="tooltip" title="На базі перевіреного фреймворку ActiveAdmin, без багів та помилок"><span style="color: #007bff"><i class="bi bi-question-circle"></i></span></span></td>
               <td style="text-align: center; vertical-align: middle">
                 <span style="color: green"><i class="bi bi-check-square"></i></span>
               </td>
@@ -181,7 +181,7 @@
               </td>
             </tr>
             <tr>
-              <td><a href="http://localhost:3000/ios.html">iOS</a> Додаток <span data-toggle="tooltip" title="Підтримка iOS 13+"><span style="color: #007bff"><i class="bi bi-question-circle"></i></span></span></td>
+              <td><a href="/ios.html">iOS</a> Додаток <span data-toggle="tooltip" title="Підтримка iOS 13+"><span style="color: #007bff"><i class="bi bi-question-circle"></i></span></span></td>
               <td style="text-align: center; vertical-align: middle">
                 <span style="color: gray"><i class="bi bi-x-square"></i></span>
               </td>
@@ -193,7 +193,7 @@
               </td>
             </tr>
             <tr>
-              <td><a href="http://localhost:3000/android.html">Android</a> Додаток <span data-toggle="tooltip" title="Підтримка Android 7+"><span style="color: #007bff"><i class="bi bi-question-circle"></i></span></span></td>
+              <td><a href="/android.html">Android</a> Додаток <span data-toggle="tooltip" title="Підтримка Android 7+"><span style="color: #007bff"><i class="bi bi-question-circle"></i></span></span></td>
               <td style="text-align: center; vertical-align: middle">
                 <span style="color: gray"><i class="bi bi-x-square"></i></span>
               </td>
