--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<title>Мій Університет - Приєднатися</title>
 	<meta name="csrf-param" content="authenticity_token" />
-<meta name="csrf-token" content="7_wnhrN8UkZps36Q0SaeFhCdswoSNu6_17MaG-8zFtjAo2WBy1K1uKbIrfjiRR9CAXK7577giz0hZ7_NP_Kopg" />
+<meta name="csrf-token" content="Eb8tvi8Z1ohOegB4OJbb8CoePjtXBcUMuHjFCwIv2XgapClDUqR36WObOIGTPYT9euO6AnnSVM6DWB9lwb5fAw" />
 	
 
 	<link rel="stylesheet" href="/assets/application-4e140c18ded27e626336bae6d3e8309d25a216b7d743ca239358d38307c83392.css" data-turbo-track="reload" />
@@ -32,7 +32,7 @@
     "@hotwired/turbo-rails": "/assets/turbo.min-f309baafa3ae5ad6ccee3e7362118b87678d792db8e8ab466c4fa284dd3a4700.js",
     "@hotwired/stimulus": "/assets/stimulus.min-d03cf1dff41d6c5698ec2c5d6a501615a7a33754dbeef8d1edd31c928d17c652.js",
     "@hotwired/stimulus-loading": "/assets/stimulus-loading-1fc59770fb1654500044afd3f5f6d7d00800e5be36746d55b94a2963a7a228aa.js",
-    "bootstrap": "https://ga.jspm.io/npm:bootstrap@5.2.0-beta1/dist/js/bootstrap.esm.js",
+    "bootstrap": "https://ga.jspm.io/npm:bootstrap@5.3.0/dist/js/bootstrap.esm.js",
     "@popperjs/core": "https://ga.jspm.io/npm:@popperjs/core@2.11.5/lib/index.js",
     "jquery": "https://code.jquery.com/jquery-3.6.0.min.js",
     "controllers/application": "/assets/controllers/application-368d98631bccbf2349e0d4f8269afb3fe9625118341966de054759d96ea86c7e.js",
@@ -43,7 +43,7 @@
 <link rel="modulepreload" href="/assets/turbo.min-f309baafa3ae5ad6ccee3e7362118b87678d792db8e8ab466c4fa284dd3a4700.js">
 <link rel="modulepreload" href="/assets/stimulus.min-d03cf1dff41d6c5698ec2c5d6a501615a7a33754dbeef8d1edd31c928d17c652.js">
 <link rel="modulepreload" href="/assets/stimulus-loading-1fc59770fb1654500044afd3f5f6d7d00800e5be36746d55b94a2963a7a228aa.js">
-<link rel="modulepreload" href="https://ga.jspm.io/npm:bootstrap@5.2.0-beta1/dist/js/bootstrap.esm.js">
+<link rel="modulepreload" href="https://ga.jspm.io/npm:bootstrap@5.3.0/dist/js/bootstrap.esm.js">
 <link rel="modulepreload" href="https://ga.jspm.io/npm:@popperjs/core@2.11.5/lib/index.js">
 <link rel="modulepreload" href="https://code.jquery.com/jquery-3.6.0.min.js">
 <link rel="modulepreload" href="/assets/controllers/application-368d98631bccbf2349e0d4f8269afb3fe9625118341966de054759d96ea86c7e.js">
